--- a/sockt.html
+++ b/sockt.html
@@ -8,21 +8,22 @@
 <body>
     <h1>WebSocket Client</h1>
     <p>Status: <span id="status">Disconnected</span></p>
-    <input type="text" id="messageInput" placeholder="Type a message" />
-    <button onclick="sendMessage()">Send</button>
+    <input type="text" id="messageInput" placeholder="Enter your message" />
+    <button onclick="sendMessage()">Send Message</button>
     <ul id="messages"></ul>
 
-        <script>
+    <script>
         let socket;
 
         // Connect to the WebSocket server
         function connect() {
-            socket = new WebSocket("ws://175.157.13.193:8765");
+            const serverAddress = "ws://175.157.13.193:8765"; // Replace with server's public IP
+            socket = new WebSocket(serverAddress);
 
             // Update connection status
             socket.onopen = () => {
                 document.getElementById("status").textContent = "Connected";
-                console.log("Connected to the server.");
+                console.log("Connected to the WebSocket server");
             };
 
             // Handle incoming messages
@@ -33,10 +34,10 @@
                 messageList.appendChild(listItem);
             };
 
-            // Handle disconnection
+            // Handle connection close
             socket.onclose = () => {
                 document.getElementById("status").textContent = "Disconnected";
-                console.log("Disconnected from the server.");
+                console.log("Disconnected from the server");
             };
 
             // Handle errors
@@ -62,9 +63,8 @@
             }
         }
 
-        // Connect to the server on page load
+        // Connect on page load
         connect();
     </script>
-
 </body>
 </html>
