--- a/socket.html
+++ b/socket.html
@@ -18,7 +18,8 @@
         function connect() {
             // Replace YOUR_PUBLIC_IP with your public IP address
         //    const serverAddress = "ws://175.157.13.193:8765";
-            const serverAddress = "ws://175.157.13.193:8765"; // Your public IP and port
+            const serverAddress = "wss://echo.websocket.org";
+ // Your public IP and port
 
             socket = new WebSocket(serverAddress);
 
