--- a/so.html
+++ b/so.html
@@ -11,7 +11,7 @@
     <p>Your IP Address: <span id="ip"></span></p>
 
     <script>
-        const serverAddress = "ws://<your-public-ip-or-ngrok-url>:8765"; // Update with your public IP or Ngrok URL
+        const serverAddress = "ws://175.157.13.193:8765"; // Update with your public IP or Ngrok URL
         const socket = new WebSocket(serverAddress);
 
         socket.onopen = () => {
